switched HE/Molotov

--- a/startup.cfg
+++ b/startup.cfg
@@ -18,10 +18,10 @@ bind kp_minus "buy deagle"
 bind kp_plus "buy ssg08"
 bind kp_1 "buy smokegrenade"
 bind kp_2 "buy flashbang"
-bind kp_3 "buy hegrenade"
+bind kp_3 "buy molotov; buy incgrenade"
 bind kp_4 "buy vesthelm; buy vest"
 bind kp_5 "buy vest"
-bind kp_del "buy molotov; buy incgrenade"
+bind kp_del "buy hegrenade"
 bind kp_7 "buy ak47; buy m4a1_silencer"
 bind kp_8 "buy galilar; buy famas"
 bind kp_9 "buy mac10; buy mp9"
