added revolver bind and moved defuser to "6"

--- a/startup.cfg
+++ b/startup.cfg
@@ -6,26 +6,31 @@ alias boosted_volume "volume 0.4"
 default_volume
 
 // [ FPS SETTINGS ]
-// reduce CPU usage where it's not needed
+// reduce CPU usage by limiting FPS in menus
 fps_max_ui 60
 fps_max_tools 60
 // good enough, really *shrug*
 fps_max 180
 
 // [ BUY BINDS ]
-bind kp_multiply "buy p250"
 bind kp_minus "buy deagle"
-bind kp_plus "buy ssg08"
+bind kp_divide "buy fiveseven; buy tec9"
+bind kp_multiply "buy p250"
+bind kp_ins "buy revolver"
+
 bind kp_1 "buy smokegrenade"
 bind kp_2 "buy flashbang"
 bind kp_3 "buy molotov; buy incgrenade"
-bind kp_4 "buy vesthelm; buy vest"
-bind kp_5 "buy vest"
 bind kp_del "buy hegrenade"
+
+bind kp_4 "buy vesthelm"
+bind kp_5 "buy vest"
+bind kp_6 "buy defuser"
+
 bind kp_7 "buy ak47; buy m4a1_silencer"
 bind kp_8 "buy galilar; buy famas"
 bind kp_9 "buy mac10; buy mp9"
-bind kp_0 "buy defuser"
+bind kp_plus "buy ssg08"
 bind kp_enter "buy awp"
 
 // [ MOVEMENT BINDS ]
