set kp_0 to xm1014

--- a/startup.cfg
+++ b/startup.cfg
@@ -16,7 +16,7 @@ fps_max 210
 bind kp_minus "buy deagle"
 bind kp_divide "buy fiveseven; buy tec9"
 bind kp_multiply "buy p250"
-bind kp_ins "buy revolver"
+bind kp_0 "buy xm1014"
 
 bind kp_1 "buy smokegrenade"
 bind kp_2 "buy flashbang"
