added training and general util commands

--- a/startup.cfg
+++ b/startup.cfg
@@ -80,5 +80,12 @@ alias "+bomb" "use weapon_knife; slot5"
 alias "-bomb" "drop"
 bind t "+bomb"
 
+// [ TRAINING ]
+bind p "sv_cheats 1; sv_rethrow_last_grenade"
+bind l "sv_cheats 1; noclip"
+
+// [ GENERAL ]
+bind u "disconnect"
+
 // [ SUCCESS ]
 echo "'startup.cfg' loaded"
