added even more keybinds

--- a/startup.cfg
+++ b/startup.cfg
@@ -34,10 +34,21 @@ bind kp_plus "buy ssg08"
 bind kp_enter "buy awp"
 
 // [ MOVEMENT BINDS ]
+bind MOUSE_X "yaw"
+bind MOUSE_Y "pitch"
+
+bind mouse1 "+attack"
+bind mouse2 "+attack2"
+
 bind w "+forward"
 bind s "+back"
 bind a "+left"
 bind d "+right"
+
+bind space "+jump"
+
+bind e "+use"
+bind r "+reload"
 
 // set volume to "boosted" when walking
 alias +volwalk "boosted_volume; +sprint"
@@ -48,6 +59,19 @@ bind alt +volwalk
 alias +volcrouch "boosted_volume; +duck"
 alias -volcrouch "default_volume; -duck"
 bind c +volcrouch
+
+// [ COMMUNICATION BINDS ]
+bind v "+voicerecord"
+// all chat
+bind j "messagemode"
+// team chat
+bind k "messagemode2"
+
+bind mouse3 "player_ping"
+
+// [ OTHER BINDS ]
+bind tab "+showscores"
+bind m "teammenu"
 
 // [ EQUIPMENT BINDS ]
 // primary
@@ -71,6 +95,11 @@ bind h "slot8"
 bind y "slot9"
 // molotov / incendiary grenade
 bind z "slot10"
+
+// healthshot
+bind x "slot12"
+
+bind b "buymenu"
 
 // drop
 bind q "drop"
