--- a/startup.cfg
+++ b/startup.cfg
@@ -1,5 +1,5 @@
 // [ VOLUME ]
-alias default_volume "volume 0.225"
+alias default_volume "volume 0.25"
 alias boosted_volume "volume 0.4"
 
 // set "default" volume
@@ -7,10 +7,10 @@ default_volume
 
 // [ FPS SETTINGS ]
 // reduce CPU usage by limiting FPS in menus
-fps_max_ui 72
-fps_max_tools 72
-// good enough, really *shrug*
-fps_max 180
+fps_max_ui 80
+fps_max_tools 80
+// explicitly disable frame-cap
+fps_max 0
 
 // [ BUY BINDS ]
 bind kp_minus "buy deagle"
@@ -28,10 +28,10 @@ bind kp_5 "buy vest"
 bind kp_6 "buy defuser"
 
 bind kp_7 "buy ak47; buy m4a1_silencer"
-bind kp_8 "buy galilar; buy famas"
+bind kp_8 "buy galilar; buy p90"
 bind kp_9 "buy mac10; buy mp9"
 bind kp_plus "buy ssg08"
-bind kp_enter "buy awp"
+bind kp_enter "buy zeus"
 
 // [ MOVEMENT BINDS ]
 bind MOUSE_X "yaw"
