--- a/startup.cfg
+++ b/startup.cfg
@@ -31,7 +31,7 @@ bind kp_7 "buy ak47; buy m4a1_silencer"
 bind kp_8 "buy galilar; buy p90"
 bind kp_9 "buy mac10; buy mp9"
 bind kp_plus "buy ssg08"
-bind kp_enter "buy zeus"
+bind kp_enter "buy taser"
 
 // [ MOVEMENT BINDS ]
 bind MOUSE_X "yaw"
