famas/galil on same key

--- a/startup.cfg
+++ b/startup.cfg
@@ -28,7 +28,7 @@ bind kp_5 "buy vest"
 bind kp_6 "buy defuser"
 
 bind kp_7 "buy ak47; buy m4a1_silencer"
-bind kp_8 "buy galilar; buy p90"
+bind kp_8 "buy galilar; buy famas"
 bind kp_9 "buy mac10; buy mp9"
 bind kp_plus "buy ssg08"
 bind kp_enter "buy taser"
