added high frame-rate caps

--- a/startup.cfg
+++ b/startup.cfg
@@ -6,11 +6,11 @@ alias boosted_volume "volume 0.45"
 default_volume
 
 // [ FPS SETTINGS ]
-// reduce CPU usage by limiting FPS in menus
-fps_max_ui 80
-fps_max_tools 80
-// explicitly disable frame-cap
-fps_max 0
+// set to screen refresh rate
+fps_max_ui 144
+fps_max_tools 144
+// twice the max-refresh rate of the monitor
+fps_max 288
 
 // [ BUY BINDS ]
 bind kp_minus "buy deagle"
