adjusted keybinds for buying weapons

--- a/startup.cfg
+++ b/startup.cfg
@@ -13,25 +13,23 @@ fps_max_tools 108
 fps_max 180
 
 // [ BUY BINDS ]
-bind kp_minus "buy deagle"
-bind kp_divide "buy fiveseven; buy tec9"
+bind kp_divide "buy tec9; buy fiveseven"
 bind kp_multiply "buy p250"
-bind kp_0 "buy xm1014"
+bind kp_minus "buy deagle"
+bind kp_plus "buy ssg08"
 
-bind kp_1 "buy smokegrenade"
-bind kp_2 "buy flashbang"
-bind kp_3 "buy molotov; buy incgrenade"
-bind kp_del "buy hegrenade"
+bind kp_7 "buy ak47; buy m4a1_silencer"
+bind kp_8 "buy galilar; buy famas"
+bind kp_9 "buy mac10; buy mp9"
 
 bind kp_4 "buy vesthelm"
 bind kp_5 "buy vest"
 bind kp_6 "buy defuser"
 
-bind kp_7 "buy ak47; buy m4a1_silencer"
-bind kp_8 "buy galilar; buy famas"
-bind kp_9 "buy mac10; buy mp9"
-bind kp_plus "buy ssg08"
-bind kp_enter "buy taser"
+bind kp_1 "buy smokegrenade"
+bind kp_2 "buy flashbang"
+bind kp_3 "buy molotov; buy incgrenade"
+bind kp_del "buy hegrenade"
 
 // [ MOVEMENT BINDS ]
 bind MOUSE_X "yaw"
