added (almost) mute button

--- a/startup.cfg
+++ b/startup.cfg
@@ -57,6 +57,9 @@ alias +volcrouch "boosted_volume; +duck"
 alias -volcrouch "default_volume; -duck"
 bind c +volcrouch
 
+// for spam
+bind n "volume 0.02"
+
 // [ COMMUNICATION BINDS ]
 bind v "+voicerecord"
 // all chat
