added health regen

--- a/nade_practice.cfg
+++ b/nade_practice.cfg
@@ -30,4 +30,8 @@ mp_restartgame 1
 // preview grenades
 sv_grenade_trajectory_prac_pipreview true
 
+// life regeneration - needs a refresh for whatever reason
+sv_regeneration_force_on 0
+sv_regeneration_force_on 1
+
 bind o "buy smokegrenade; buy flashbang; buy molotov; buy incgrenade; buy hegrenade; buy vesthelm; buy ak47; buy m4a1_silencer"
