added ; for some problems

--- a/startup.cfg
+++ b/startup.cfg
@@ -1,117 +1,117 @@
 // [ VOLUME ]
-alias default_volume "volume 0.22"
-alias boosted_volume "volume 0.42"
+alias default_volume "volume 0.22";
+alias boosted_volume "volume 0.42";
 
 // set "default" volume
-default_volume
+default_volume;
 
 // [ FPS SETTINGS ]
 // set to screen refresh rate
-fps_max_ui 120
-fps_max_tools 120
-fps_max 264
+fps_max_ui 120;
+fps_max_tools 120;
+fps_max 252;
 
 // [ BUY BINDS ]
-bind kp_divide "buy tec9; buy fiveseven"
-bind kp_multiply "buy p250"
-bind kp_minus "buy deagle"
-bind kp_plus "buy ssg08"
+bind kp_divide "buy tec9; buy fiveseven";
+bind kp_multiply "buy p250";
+bind kp_minus "buy deagle";
+bind kp_plus "buy ssg08";
 
-bind kp_7 "buy ak47; buy m4a1_silencer"
-bind kp_8 "buy galilar; buy famas"
-bind kp_9 "buy mac10; buy mp9"
+bind kp_7 "buy ak47; buy m4a1_silencer";
+bind kp_8 "buy galilar; buy famas";
+bind kp_9 "buy mac10; buy mp9";
 
-bind kp_4 "buy vesthelm"
-bind kp_5 "buy vest"
-bind kp_6 "buy defuser"
+bind kp_4 "buy vesthelm";
+bind kp_5 "buy vest";
+bind kp_6 "buy defuser";
 
-bind kp_1 "buy smokegrenade"
-bind kp_2 "buy flashbang"
-bind kp_3 "buy molotov; buy incgrenade"
-bind kp_del "buy hegrenade"
+bind kp_1 "buy smokegrenade";
+bind kp_2 "buy flashbang";
+bind kp_3 "buy molotov; buy incgrenade";
+bind kp_del "buy hegrenade";
 
 // [ MOVEMENT BINDS ]
-bind MOUSE_X "yaw"
-bind MOUSE_Y "pitch"
+bind MOUSE_X "yaw";
+bind MOUSE_Y "pitch";
 
-bind mouse1 "+attack"
-bind mouse2 "+attack2"
+bind mouse1 "+attack";
+bind mouse2 "+attack2";
 
-bind w "+forward"
-bind s "+back"
-bind a "+left"
-bind d "+right"
+bind w "+forward";
+bind s "+back";
+bind a "+left";
+bind d "+right";
 
-bind space "+jump"
+bind space "+jump";
 
-bind e "+use"
-bind r "+reload"
+bind e "+use";
+bind r "+reload";
 
 // set volume to "boosted" when walking
-alias +volwalk "boosted_volume; +sprint"
-alias -volwalk "default_volume; -sprint"
-bind alt +volwalk
+alias +volwalk "boosted_volume; +sprint";
+alias -volwalk "default_volume; -sprint";
+bind alt +volwalk;
 
 // set volume to "boosted" when crouching
-alias +volcrouch "boosted_volume; +duck"
-alias -volcrouch "default_volume; -duck"
-bind c +volcrouch
+alias +volcrouch "boosted_volume; +duck";
+alias -volcrouch "default_volume; -duck";
+bind c +volcrouch;
 
 // for spam
-bind n "volume 0.02"
+bind n "volume 0.02";
 
 // [ COMMUNICATION BINDS ]
-bind v "+voicerecord"
+bind v "+voicerecord";
 // all chat
-bind j "messagemode"
+bind j "messagemode";
 // team chat
-bind k "messagemode2"
+bind k "messagemode2";
 
-bind mouse3 "player_ping"
+bind mouse3 "player_ping";
 
 // [ OTHER BINDS ]
-bind tab "+showscores"
-bind m "teammenu"
+bind tab "+showscores";
+bind m "teammenu";
 
 // [ EQUIPMENT BINDS ]
 // primary
-bind "1" "slot1"
+bind "1" "slot1";
 // pistol
-bind "2" "slot2"
+bind "2" "slot2";
 // knife
-bind "3" "slot3"
+bind "3" "slot3";
 // cycle grenades
-bind "4" "slot4"
+bind "4" "slot4";
 // bomb
-bind "5" "slot5"
+bind "5" "slot5";
 
 // he grenade
-bind g "slot6"
+bind g "slot6";
 // flashbang
-bind f "slot7"
+bind f "slot7";
 // smoke grenade
-bind h "slot8"
+bind h "slot8";
 // decoy grenade
-bind z "slot9"
+bind z "slot9";
 // molotov / incendiary grenade
-bind y "slot10"
+bind y "slot10";
 
 // healthshot
-bind x "slot12"
+bind x "slot12";
 
-bind b "buymenu"
+bind b "buymenu";
 
 // drop
-bind q "drop"
+bind q "drop";
 
 // drop bomb
-alias "+bomb" "use weapon_knife; slot5"
-alias "-bomb" "drop"
-bind t "+bomb"
+alias "+bomb" "use weapon_knife; slot5";
+alias "-bomb" "drop";
+bind t "+bomb";
 
 // [ TRAINING ]
-bind p "sv_cheats 1; sv_rethrow_last_grenade"
-bind l "sv_cheats 1; noclip"
+bind p "sv_cheats 1; sv_rethrow_last_grenade";
+bind l "sv_cheats 1; noclip";
 
 // [ SUCCESS ]
-echo "'startup.cfg' loaded"
+echo "'startup.cfg' loaded";
